--- a/config/dev-css/base.less
+++ b/config/dev-css/base.less
@@ -1,11 +1,16 @@
 @import "variables.less";
 
 /* Less Files */
-/* @import "../../../config/bootstrap-theme/stylesheets/theme.less"; */
+/* @import "./../../config/bootstrap-theme/TrendyBootstrapTheme/assets/css/theme.less"; */
 
 /* Css Files */
 @import (less) "./../../bower_components/bootstrap/dist/css/bootstrap.css";
+@import (less) "./../../bower_components/font-awesome/css/font-awesome.css";
+@import (less) "./../../bower_components/datatables/media/css/jquery.dataTables.css";
+@import (less) "./../../bower_components/datatables/media/css/dataTables.bootstrap.css";
+@import (less) "./../../bower_components/bootstrap-toggle/css/bootstrap-toggle.css";
 @import (less) "./../../bower_components/summernote/dist/summernote-bs3.css";
+@import (less) "./../../config/bootstrap-theme/TrendyBootstrapTheme/assets/css/theme.min.css";
 
 /* Internal dev css file */
 @import (less) "style.css";
