--- a/config/dev-css/style.css
+++ b/config/dev-css/style.css
@@ -6,3 +6,28 @@ body {
 a {
   color: #00B7FF;
 }
+
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+  box-sizing: border-box;
+  display: inline-block;
+  min-width: 1.5em;
+  padding: 0px;
+  margin-left: 0px;
+  text-align: center;
+  text-decoration: none !important;
+  cursor: pointer;
+  *cursor: hand;
+  border: 0px solid transparent;
+  border-radius: 2px;
+}
+
+
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+  color: white !important;
+  border: 0px solid transparent;
+  background-color: transparent;
+}
+.dataTables_wrapper .dataTables_paginate .paginate_button:active {
+  outline: none;
+  background-color: transparent;
+}
