--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,6 +22,49 @@
     <link rel='stylesheet' href='/stylesheets/frontend.css' />
   </head>
   <body>
+  		 <div class="navbar navbar-dark navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="/" class="navbar-brand navbar-title">{{title}}</a>
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-main">
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="/" id="themes">Home <span class="caret"></span></a>
+              <ul class="dropdown-menu" aria-labelledby="themes">
+                <li><a href="/">Default</a></li>
+                <li class="divider"></li>
+                <li><a href="/">link</a></li>
+                <li><a href="/">link</a></li>
+                <li><a href="/">link</a></li>
+                <li><a href="/">link</a></li>
+                <li><a href="/">link</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="/components">Components</a>
+            </li>
+            <li>
+              <a href="#">Examples</a>
+            </li>
+          </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+          <form class="navbar-form navbar-left" role="search">
+            <input type="text" class="form-control" placeholder="Search">
+            <button type="submit" class="btn glyphicon glyphicon-search"></button>
+          </form>
+          </ul>
+
+        </div>
+      </div>
+    </div>
     {{{body}}}
   </body>
+  <script src="/javascript/frontend.js"></script>
 </html>
