Fixed magins in columns, fixed example summernote

--- a/config/dev-css/base.less
+++ b/config/dev-css/base.less
@@ -9,6 +9,7 @@
 @import (less) "./../../bower_components/datatables/media/css/jquery.dataTables.css";
 @import (less) "./../../bower_components/datatables/media/css/dataTables.bootstrap.css";
 @import (less) "./../../bower_components/bootstrap-toggle/css/bootstrap-toggle.css";
+@import (less) "./../../bower_components/summernote/dist/summernote.css";
 @import (less) "./../../bower_components/summernote/dist/summernote-bs3.css";
 @import (less) "./../../config/bootstrap-theme/TrendyBootstrapTheme/assets/css/theme.min.css";
 
