base style update

--- a/config/dev-css/base.less
+++ b/config/dev-css/base.less
@@ -11,7 +11,7 @@
 @import (less) "./../../bower_components/bootstrap-toggle/css/bootstrap-toggle.css";
 @import (less) "./../../bower_components/summernote/dist/summernote.css";
 @import (less) "./../../bower_components/summernote/dist/summernote-bs3.css";
-@import (less) "./../../config/bootstrap-theme/TrendyBootstrapTheme/assets/css/theme.min.css";
+@import (less) "./../../config/theme/yeti.css";
 
 /* Internal dev css file */
 @import (less) "style.css";
