--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,70 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>{{title}}</title>
+    <title>{{{__ "Plexus"}}}</title>   
     <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/images/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/images/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/images/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/images/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/images/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="/images/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-	<link rel="manifest" href="/images/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/images/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/images/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/images/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/images/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/images/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+  <link rel="manifest" href="/images/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
     <link rel='stylesheet' href='/stylesheets/frontend.css' />
   </head>
   <body>
-  		 <div class="navbar navbar-dark navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="/" class="navbar-brand navbar-title">{{title}}</a>
-          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="navbar-collapse collapse" id="navbar-main">
-          <ul class="nav navbar-nav">
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="/" id="themes">Home <span class="caret"></span></a>
-              <ul class="dropdown-menu" aria-labelledby="themes">
-                <li><a href="/">Default</a></li>
-                <li class="divider"></li>
-                <li><a href="/">link</a></li>
-                <li><a href="/">link</a></li>
-                <li><a href="/">link</a></li>
-                <li><a href="/">link</a></li>
-                <li><a href="/">link</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="/components">Components</a>
-            </li>
-            <li>
-              <a href="#">Examples</a>
-            </li>
-          </ul>
-
-          <ul class="nav navbar-nav navbar-right">
-          <form class="navbar-form navbar-left" role="search">
-            <input type="text" class="form-control" placeholder="Search">
-            <button type="submit" class="btn glyphicon glyphicon-search"></button>
-          </form>
-          </ul>
-
-        </div>
+    <!-- start: Header -->
+    <header class="navbar">
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".sidebar-nav.nav-collapse">
+            <svg class="filled-icon-grid"><use xlink:href="/fonts/filled-icons.svg#filled-icon-grid"></use></svg>
+      </button> 
+        <a class="navbar-brand col-lg-2 col-sm-1 col-xs-12" href="/"><span>{{{__ "Plexus"}}}</span></a>
+      <!-- start: Header Menu -->
+      <div class="nav-no-collapse header-nav">
+        <ul class="nav navbar-nav pull-right">
+          <li>
+            <a class="btn" href="/">
+              {{{__ "Home"}}}
+            </a>
+          </li>
+          <li>
+            <a class="btn" href="/components">
+              {{{__ "Components"}}}
+            </a>
+          </li>
+          <li>
+            <a class="btn" href="/icons">
+              {{{__ "Icons"}}}
+            </a>
+          </li>
+        </ul>
       </div>
-    </div>
-    {{{body}}}
+      <!-- end: Header Menu -->  
+    </header>
+    <!-- end: Header -->
+      <div class="full" id="content">
+      <!-- start: Content -->
+        {{{body}}}
+      <!-- end: Content --> 
+      </div>
+  <div class="clearfix"></div>
+  <footer> 
+    <div class="row">
+      <div class="col-sm-12">
+        &copy; 2015 Plexus. <a href="http://stokstylez.nl">Boilerplate</a> by JB Stoker
+      </div><!--/.col--> 
+    </div><!--/.row-->  
+  </footer>
   </body>
   <script src="/javascript/frontend.js"></script>
 </html>
