--- a/views/partials/sidebarmenu.hbs
+++ b/views/partials/sidebarmenu.hbs
@@ -1,151 +1,80 @@
-   <div class="profile-box">
-        <div class="media">
-            <a class="pull-left" href="/user/profile">
-                <img class="img-circle" src="/images/avatar.png">
-            </a>
-            <div class="media-body">
-                <h5 class="media-heading">Welcome <span>Jelmer</span></h5>
-                <small>Programmer</small>
-            </div>
-        </div>
-    </div>
     <ul class="nav panel-list">
-        <li class="nav-level">Demo Menu</li>
-        <li class="">
-            <a href="/">
-                <i class="fa fa-home"></i>
-                <span class="menu-text">Home</span>
-                <span class="selected"></span>
-            </a>
-        </li>
-        <li>
-            <a href="/components">
-                <i class="fa fa-home"></i>
-                <span class="menu-text">Components</span>
-                <span class=""></span>
-            </a>
-        </li>
-        <li>
-            <a href="/icons">
-                <i class="fa fa-home"></i>
-                <span class="menu-text">Icons</span>
-                <span class=""></span>
-            </a>
-        </li>
-        <li>
-            <a href="/faq">
-                <i class="fa fa-home"></i>
-                <span class="menu-text">Faq</span>
-                <span class=""></span>
-            </a>
-        </li>
-        <li>
-            <a href="/terms">
-                <i class="fa fa-home"></i>
-                <span class="menu-text">Terms & Conditions</span>
-                <span class=""></span>
-            </a>
-        </li>
-        <li class="nav-level">User Demo Menu</li> 
-        <li class="active">
-            <a href="/manage_users">
-                <i class="fa fa-home"></i>
-                <span class="menu-text">User Management</span>
-                <span class="selected"></span>
-            </a>
-        </li>
-       <li>
-            <a href="/user/profile">
-                <i class="fa fa-home"></i>
-                <span class="menu-text">Profile</span>
-                <span class=""></span>
-            </a>
-        </li>
-        <li>
-            <a href="/login">
-                <i class="fa fa-home"></i>
-                <span class="menu-text">Login/Register</span>
-                <span class=""></span>
-            </a>
-        </li>
-        <li>
-            <a href="/user/lock">
-                <i class="fa fa-home"></i>
-                <span class="menu-text">Lock Page</span>
-                <span class=""></span>
-            </a>
-        </li>
-        <li class="nav-level">Layout Demo Menu</li>
-        <li>
-            <a href="/left-sidebar">
-                <i class="fa fa-home"></i>
-                <span class="menu-text">Left Side-bar</span>
-                <span class=""></span>
-            </a>
-        </li>
-        <li>
-            <a href="/right-sidebar">
-                <i class="fa fa-home"></i>
-                <span class="menu-text">Right Side-bar</span>
-                <span class=""></span>
-            </a>
-        </li>
-        <li>
-            <a href="/topnav-user">
-                <i class="fa fa-home"></i>
-                <span class="menu-text">Top-navigation + user menu</span>
-                <span class=""></span>
-            </a>
-        </li>
-        <li>
-            <a href="/clean">
-                <i class="fa fa-home"></i>
-                <span class="menu-text">Clean</span>
-                <span class=""></span>
-            </a>
-        </li>
-        <li class="nav-level">Demo Menu Levels</li>
         <li class="hoe-has-menu">
             <a href="javascript:void(0)">
-                <i class="fa fa-sitemap"></i>
-                <span class="menu-text">Menu Level 1</span>
-                <span class="selected"></span>
+                    <img class="pull-left img-circle filled-icon-nav" src="/images/avatar.png">
+                        <span class="media-body-nav">
+                            <span class="menu-text">Welcome <span>Jelmer</span></span>
+                        </span>
             </a>
             <ul class="hoe-sub-menu">
                 <li>
-                    <a href="javascript:void(0)">
-                      <span class="menu-text">level 2</span>
-                      <span class="selected"></span>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:void(0)">
-                      <span class="menu-text">level 2</span>
-                      <span class="selected"></span>
-                    </a>
-                </li>
+                        <a href="/user/profile">
+                            <svg class="filled-icon-profile-6"><use xlink:href="/fonts/filled-icons.svg#filled-icon-profile-6"></use></svg>
+                            <span class="menu-text">Profile</span>
+                            <span class=""></span>
+                        </a>
+                    </li>
                 <li class="hoe-has-menu">
                     <a href="javascript:void(0)">
-                        <span class="menu-text">level 2</span>
+                        <svg class="filled-icon-folder-lock"><use xlink:href="/fonts/filled-icons.svg#filled-icon-folder-lock"></use></svg>
+                        <span class="menu-text">Admin</span>
                         <span class="selected"></span>
                     </a>
                     <ul class="hoe-sub-menu">
+                    <li class="">
+                        <a href="/manage_users">
+                            <svg class="filled-icon-connection-2"><use xlink:href="/fonts/filled-icons.svg#filled-icon-connection-2"></use></svg>
+                            <span class="menu-text">User Management</span>
+                            <span class="selected"></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/login">
+                            <svg class="filled-icon-window-register"><use xlink:href="/fonts/filled-icons.svg#filled-icon-window-register"></use></svg>
+                            <span class="menu-text">Login/Register</span>
+                            <span class=""></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/user/lock">
+                            <svg class="filled-icon-lock-3"><use xlink:href="/fonts/filled-icons.svg#filled-icon-lock-3"></use></svg>
+                            <span class="menu-text">Lock Page</span>
+                            <span class=""></span>
+                        </a>
+                    </li>
                         <li class="hoe-has-menu">
                             <a href="javascript:void(0)">
-                                <span class="menu-text">level 3</span>
+                                <svg class="filled-icon-artboard"><use xlink:href="/fonts/filled-icons.svg#filled-icon-artboard"></use></svg>
+                                <span class="menu-text">Pages & Components</span>
                                 <span class="selected"></span>
                             </a>
                             <ul class="hoe-sub-menu">
                                 <li>
-                                    <a href="javascript:void(0)">
-                                        <span class="menu-text">level 4</span>
-                                        <span class="selected"></span>
+                                    <a href="/components">
+                                        <svg class="filled-icon-plugins-1"><use xlink:href="/fonts/filled-icons.svg#filled-icon-plugins-1"></use></svg>
+                                        <span class="menu-text">Components</span>
+                                        <span class=""></span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="javascript:void(0)">
-                                        <span class="menu-text">level 4</span>
-                                        <span class="selected"></span>
+                                    <a href="/icons">
+                                        <svg class="filled-icon-spray"><use xlink:href="/fonts/filled-icons.svg#filled-icon-spray"></use></svg>
+                                        <span class="menu-text">Icons</span>
+                                        <span class=""></span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/faq">
+                                        <svg class="filled-icon-information"><use xlink:href="/fonts/filled-icons.svg#filled-icon-information"></use></svg>
+                                        <span class="menu-text">Faq</span>
+                                        <span class=""></span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/terms">
+                                        <svg class="filled-icon-hand-file-2"><use xlink:href="/fonts/filled-icons.svg#filled-icon-hand-file-2"></use></svg>
+                                        <span class="menu-text">Terms & Conditions</span>
+                                        <span class=""></span>
                                     </a>
                                 </li>
                             </ul>
@@ -172,4 +101,40 @@
                         </li>  
                     </ul>
                 </li>
+        <li class="nav-level">Menu</li>
+        <li class="">
+            <a href="/">
+                <svg class="filled-icon-house-4"><use xlink:href="/fonts/filled-icons.svg#filled-icon-house-4"></use></svg>
+                <span class="menu-text">Home</span>
+                <span class="selected"></span>
+            </a>
+        </li>
+        <li>
+            <a href="/left-sidebar">
+               <svg class="filled-icon-arrange-3-5"><use xlink:href="/fonts/filled-icons.svg#filled-icon-arrange-3-5"></use></svg>
+                <span class="menu-text">Left Side-bar</span>
+                <span class=""></span>
+            </a>
+        </li>
+        <li>
+            <a href="/right-sidebar">
+                <svg class="filled-icon-arrange-3-2"><use xlink:href="/fonts/filled-icons.svg#filled-icon-arrange-3-2"></use></svg>
+                <span class="menu-text">Right Side-bar</span>
+                <span class=""></span>
+            </a>
+        </li>
+        <li>
+            <a href="/topnav-user">
+                <svg class="filled-icon-arrange-2-4"><use xlink:href="/fonts/filled-icons.svg#filled-icon-arrange-2-4"></use></svg>
+                <span class="menu-text">Top-navigation + user menu</span>
+                <span class=""></span>
+            </a>
+        </li>
+        <li>
+            <a href="/clean">
+                <svg class="filled-icon-arrange-2-4"><use xlink:href="/fonts/filled-icons.svg#filled-icon-arrange-2-4"></use></svg>
+                <span class="menu-text">Clean</span>
+                <span class=""></span>
+            </a>
+        </li>
     </ul>
