--- a/views/layouts/sidebar-left.hbs
+++ b/views/layouts/sidebar-left.hbs
@@ -33,7 +33,7 @@
     <div id="hoeapp-wrapper" class="hoe-hide-lpanel" hoe-device-type="desktop">
         <header id="hoe-header" hoe-color-type="logo-bg8" hoe-lpanel-effect="shrink">
             <div class="hoe-left-header">
-                <a href="#"><span class="logo">{{{__ "Plexus"}}}</span></a>
+                <a href="#"><span class="hoe-sidebar-toggle logo">{{{__ "Plexus"}}}</span></a>
                 <span class="hoe-sidebar-toggle"><a href="#"></a></span>
             </div>
             <div class="hoe-right-header" hoe-color-type="header-bg8" hoe-position-type="relative" >
