added passport js

--- a/views/partials/lefttopnavhome.hbs
+++ b/views/partials/lefttopnavhome.hbs
@@ -25,6 +25,9 @@
 			<li>
 				<a href="/right-sidebar">Right Side-bar Page</a>
 			</li>
+			<li>
+				<a href="/topnav-user">Top navigation + user menu Page</a>
+			</li>
 		</ul>
 	</li> 
 	<li>
