--- a/views/partials/sidebarmenu.hbs
+++ b/views/partials/sidebarmenu.hbs
@@ -21,82 +21,20 @@
                         <span class="selected"></span>
                     </a>
                     <ul class="hoe-sub-menu">
-                    <li class="">
-                        <a href="/manage_users">
-                            <svg class="filled-icon-connection-2"><use xlink:href="/fonts/filled-icons.svg#filled-icon-connection-2"></use></svg>
-                            <span class="menu-text">User Management</span>
-                            <span class="selected"></span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/login">
-                            <svg class="filled-icon-window-register"><use xlink:href="/fonts/filled-icons.svg#filled-icon-window-register"></use></svg>
-                            <span class="menu-text">Login/Register</span>
-                            <span class=""></span>
-                        </a>
-                    </li>
                     <li>
                         <a href="/user/lock">
                             <svg class="filled-icon-lock-3"><use xlink:href="/fonts/filled-icons.svg#filled-icon-lock-3"></use></svg>
-                            <span class="menu-text">Lock Page</span>
+                            <span class="menu-text">Lock</span>
                             <span class=""></span>
                         </a>
                     </li>
-                        <li class="hoe-has-menu">
-                            <a href="javascript:void(0)">
-                                <svg class="filled-icon-artboard"><use xlink:href="/fonts/filled-icons.svg#filled-icon-artboard"></use></svg>
-                                <span class="menu-text">Pages & Components</span>
-                                <span class="selected"></span>
-                            </a>
-                            <ul class="hoe-sub-menu">
-                                <li>
-                                    <a href="/components">
-                                        <svg class="filled-icon-plugins-1"><use xlink:href="/fonts/filled-icons.svg#filled-icon-plugins-1"></use></svg>
-                                        <span class="menu-text">Components</span>
-                                        <span class=""></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="/icons">
-                                        <svg class="filled-icon-spray"><use xlink:href="/fonts/filled-icons.svg#filled-icon-spray"></use></svg>
-                                        <span class="menu-text">Icons</span>
-                                        <span class=""></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="/faq">
-                                        <svg class="filled-icon-information"><use xlink:href="/fonts/filled-icons.svg#filled-icon-information"></use></svg>
-                                        <span class="menu-text">Faq</span>
-                                        <span class=""></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="/terms">
-                                        <svg class="filled-icon-hand-file-2"><use xlink:href="/fonts/filled-icons.svg#filled-icon-hand-file-2"></use></svg>
-                                        <span class="menu-text">Terms & Conditions</span>
-                                        <span class=""></span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="javascript:void(0)">
-                                <span class="menu-text">level 3</span>
-                                <span class="selected"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="javascript:void(0)">
-                                <span class="menu-text">level 3</span>
-                                <span class="selected"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="javascript:void(0)">
-                                <span class="menu-text">level 3</span>
-                                <span class="selected"></span>
-                            </a>
-                        </li>
+                    <li>
+                        <a href="/logout">
+                            <svg class="filled-icon-lock-2"><use xlink:href="/fonts/filled-icons.svg#filled-icon-lock-2"></use></svg>
+                            <span class="menu-text">Logout</span>
+                            <span class=""></span>
+                        </a>
+                    </li>
                         </ul>
                         </li>  
                     </ul>
@@ -109,32 +47,11 @@
                 <span class="selected"></span>
             </a>
         </li>
-        <li>
-            <a href="/left-sidebar">
-               <svg class="filled-icon-arrange-3-5"><use xlink:href="/fonts/filled-icons.svg#filled-icon-arrange-3-5"></use></svg>
-                <span class="menu-text">Left Side-bar</span>
-                <span class=""></span>
-            </a>
-        </li>
-        <li>
-            <a href="/right-sidebar">
-                <svg class="filled-icon-arrange-3-2"><use xlink:href="/fonts/filled-icons.svg#filled-icon-arrange-3-2"></use></svg>
-                <span class="menu-text">Right Side-bar</span>
-                <span class=""></span>
-            </a>
-        </li>
-        <li>
-            <a href="/topnav-user">
-                <svg class="filled-icon-arrange-2-4"><use xlink:href="/fonts/filled-icons.svg#filled-icon-arrange-2-4"></use></svg>
-                <span class="menu-text">Top-navigation + user menu</span>
-                <span class=""></span>
-            </a>
-        </li>
-        <li>
-            <a href="/clean">
-                <svg class="filled-icon-arrange-2-4"><use xlink:href="/fonts/filled-icons.svg#filled-icon-arrange-2-4"></use></svg>
-                <span class="menu-text">Clean</span>
-                <span class=""></span>
+        <li class="">
+            <a href="/manage_users">
+                <svg class="filled-icon-connection-2"><use xlink:href="/fonts/filled-icons.svg#filled-icon-connection-2"></use></svg>
+                <span class="menu-text">User Management</span>
+                <span class="selected"></span>
             </a>
         </li>
     </ul>
