--- a/views/acl/login.hbs
+++ b/views/acl/login.hbs
@@ -19,11 +19,11 @@
 					<form role="form" method="post" action="/login">
 					  <div class="form-group">
 						<label for="email">Email</label>
-						<input type="text" class="form-control" id="email" placeholder="Email">
+						<input type="text" class="form-control" id="email" name="email" placeholder="Email">
 					  </div>
 					  <div class="form-group">
 						<label for="password">Password</label>
-						<input type="password" class="form-control" id="password" placeholder="Password">
+						<input type="password" class="form-control" id="password" name="password" placeholder="Password">
 					  </div>
 					  <div class="checkbox">
 						<label>
