--- a/views/partials/lefttopnavhome.hbs
+++ b/views/partials/lefttopnavhome.hbs
@@ -13,6 +13,16 @@
 		<a href="/icons">
 			Icons
 		</a>
+	</li>	
+	<li class="hoe-rheader-submenu">
+		<a href="/terms">
+			Terms
+		</a>
+	</li>	
+	<li class="hoe-rheader-submenu">
+		<a href="/faq">
+			FAQ
+		</a>
 	</li>										
 	<li class="dropdown hoe-rheader-submenu">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" >
