--- a/views/acl/index.hbs
+++ b/views/acl/index.hbs
@@ -1,3 +1,5 @@
+<div class="container-fluid">
+    <div class="row">
 <!-- Centered tabs -->
 <ul class="nav nav-tabs nav-justified">
    <li role="presentation" class="active"><a href="#users" aria-controls="users" role="tab" data-toggle="tab">Users</a></li>
@@ -6,6 +8,8 @@
   <!-- Tab panels -->
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="users">
+<br>
+        <br>
     <div class="center col-md-12 horizontaltab-form">
         <form class="form-inline">
           <div class="col-md-3">
@@ -31,6 +35,7 @@
             </div> 
         </form>  
     </div>
+    <br>
         <div class="table-responsive col-md-12 table-hover table-striped">    
             <table width="100%" class="display table" id="example" class="" cellspacing="0">
                 <thead>
@@ -83,6 +88,8 @@
         </div>  
     </div>
     <div role="tabpanel" class="tab-pane" id="roles">
+        <br>
+        <br>
         <div class="center col-md-12 horizontaltab-form">
         <form class="form-inline">
           <div class="col-md-2">
@@ -106,6 +113,7 @@
             </div> 
         </form> 
     </div>
+<br>
         <div class="table-responsive col-md-12 table-hover table-striped">    
             <table width="100%" class="display table" id="example" class="" cellspacing="0">
                 <thead>
@@ -154,3 +162,5 @@
         </div>  
     </div>
   </div>
+    </div>
+  </div>  
