--- a/views/bodies/components.hbs
+++ b/views/bodies/components.hbs
@@ -1,5 +1,5 @@
 <div class="table-responsive  table-hover table-striped">    
-    <table width="100%" class="display" id="example" class="" cellspacing="0">
+    <table width="100%" class="display datatable" cellspacing="0">
         <thead>
             <tr>
                 <th>Name</th>
