--- a/config/dev-css/base.less
+++ b/config/dev-css/base.less
@@ -1,28 +1,33 @@
-@import "variables.less";
-
 /* Css Files */
 @import (less) "./../../bower_components/datatables/media/css/jquery.dataTables.css";
 @import (less) "./../../bower_components/bootstrap/dist/css/bootstrap.css";
-@import (less) "./../../config/theme/yeti.css";
+@import (less) "./../../config/theme/css/yeti.css";
 @import (less) "./../../bower_components/font-awesome/css/font-awesome.css";
 @import (less) "./../../bower_components/datatables/media/css/dataTables.bootstrap.css";
+
+/* Bootstrap-toggle.js css files */
 @import (less) "./../../bower_components/bootstrap-toggle/css/bootstrap-toggle.css";
+
+/* Summernote.js css files */
 @import (less) "./../../bower_components/summernote/dist/summernote.css";
 @import (less) "./../../bower_components/summernote/dist/summernote-bs3.css";
-@import (less) "./../../bower_components/fullcalendar/fullcalendar.css";
-@import (less) "./../../config/theme/hoe-shrink-effect.css";
-@import (less) "./../../config/theme/hoe-rightsidebar.css";
-@import (less) "./../../config/theme/hoe-horizontal-navigation.css";
-@import (less) "./../../config/theme/hoe-theme-color.css";
-@import (less) "./../../config/theme/extra.css";
-@import (less) "./../../config/theme/header.css";
-@import (less) "./../../config/theme/hoe.css";
 
-/* Internal dev css file */
-@import (less) "style.css";
+/* Toggle File */
+@import "toggle.less";
+@import (less) "side-toggle.css";
 
 /* Loader File */
 @import (less) "loader.less";
+
+/* custom theme for components */
+@import (less) "demopages.css";
+
+/* Internal dev theme css file */
+@import (less) "./../../config/theme/css/datatables-theme.css";
+@import (less) "./../../config/theme/css/summernote-theme.css";
+@import (less) "./../../config/theme/css/fonts-theme.css";
+@import (less) "./../../config/theme/css/theme.css";
+
 
 
 
