--- a/views/bodies/index.hbs
+++ b/views/bodies/index.hbs
@@ -1,6 +1,6 @@
-<p>
-  		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque pharetra consectetur. Maecenas quis tellus fermentum, lacinia libero et, blandit risus. Vivamus ac lectus vitae nulla sagittis fringilla. Fusce aliquam aliquam justo, sed ultricies mauris vehicula et. Nam vitae mi non sem volutpat vestibulum ut id odio. Suspendisse pretium suscipit posuere. Ut nisl elit, interdum a mauris in, mollis scelerisque orci. Nullam posuere non est id dictum.
-  		</p>
+<h1>Ipsum lorem</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque pharetra consectetur. Maecenas quis tellus fermentum, lacinia libero et, blandit risus. Vivamus ac lectus vitae nulla sagittis fringilla. Fusce aliquam aliquam justo, sed ultricies mauris vehicula et. Nam vitae mi non sem volutpat vestibulum ut id odio. Suspendisse pretium suscipit posuere. Ut nisl elit, interdum a mauris in, mollis scelerisque orci. Nullam posuere non est id dictum.
+</p>
 		<p>
 		Donec porttitor vehicula purus, et pulvinar nisi feugiat nec. Nulla ut auctor eros, quis euismod purus. Praesent tempor massa et magna condimentum ultrices. Mauris vitae feugiat ante, sed porttitor eros. In hac habitasse platea dictumst. Pellentesque sagittis massa eget sem tempor, et iaculis purus fringilla. Aenean in sapien massa. Praesent aliquet magna sed turpis euismod accumsan. Aliquam ullamcorper molestie leo, at semper ante sagittis vitae. Phasellus eget ante in lectus molestie varius. Quisque quis nulla aliquam, placerat nibh a, blandit sem. Donec non maximus eros, vel fermentum elit. In lectus sapien, laoreet vitae erat maximus, venenatis eleifend magna. Aenean consectetur imperdiet viverra. Mauris convallis metus fermentum, vulputate mi vel, ultricies dolor.
   		</p>
@@ -12,4 +12,4 @@
   		</p>
 		<p>
 		In hac habitasse platea dictumst. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse potenti. Sed commodo imperdiet nisi, quis placerat lacus posuere in. Curabitur laoreet eros felis, in interdum massa ultricies eget. Nullam vitae mauris vestibulum, gravida nulla in, pharetra ligula. Etiam risus arcu, aliquam non efficitur sit amet, consequat sit amet sapien. Integer mollis tortor urna, et aliquam nisi cursus et.
- 	</p>
+</p>
