--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,7 +1,3 @@
-<footer> 
-  	<div class="row">
-  	  	<div class="col-sm-12">
-  	  	  &copy; 2015 Plexus. <a href="http://stokstylez.nl">Boilerplate</a> by JB Stoker
-  	  	</div><!--/.col--> 
-  	</div><!--/.row-->  
+<footer id="footer"> 
+  	  	  &copy; 2015 Plexus. <a href="http://stokstylez.nl">Boilerplate</a> by JB Stoker  
 </footer>
